argocd/kustomize/simple-server/example-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-server
  labels:
    app: simple-server
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/conditions.simple-server-grpc: '[{"field":"http-header","httpHeaderConfig":{"httpHeaderName":"Content-Type","values":["application/grpc"]}}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:...:certificate/...
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/tags: "Team=devops,Server=etc,Service=simple-server,Security_level=moderate,Environment=dev"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/security-groups: sg-...
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: simple-server.example.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-server-grpc
            port:
              name: grpc
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-server
            port:
              name: http
